# a.malyugin

./: .gitignore  CMakeLists.txt  README.md  csv.cpp  csv.h  gg.txt  in.txt  lab0.cpp  lab0b.cpp  lab1evm.cpp  lab2evm.cpp  labuba0  main.cpp  output.csv
lab0/: README.md  csv.cpp  csvclass.h  lab0b.cpp  main.cpp
lab1/: CMakeLists.txt  ICACHE.hpp  ICACHELFU.cpp  ICACHELFU.hpp  ICACHELRU.cpp  ICACHELRU.hpp  fibonachi.cpp  fibonachi.hpp  main.cpp  test.cpp
output/: lab0b  lab1evm  lab2evm
output/lab0b.dSYM/Contents/: Info.plist
output/lab0b.dSYM/Contents/Resources/DWARF/: lab0b
output/lab0b.dSYM/Contents/Resources/Relocations/aarch64/: lab0b.yml
output/lab1evm.dSYM/Contents/: Info.plist
output/lab1evm.dSYM/Contents/Resources/DWARF/: lab1evm
output/lab1evm.dSYM/Contents/Resources/Relocations/aarch64/: lab1evm.yml
output/lab2evm.dSYM/Contents/: Info.plist
output/lab2evm.dSYM/Contents/Resources/DWARF/: lab2evm
output/lab2evm.dSYM/Contents/Resources/Relocations/aarch64/: lab2evm.yml
